--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "echarts": "^4.5.0",
     "echarts-wordcloud": "^1.1.3",
     "element-ui": "2.3.4",
+    "identify": "^0.1.5",
     "js-cookie": "2.2.0",
     "js-md5": "^0.7.3",
     "normalize.css": "7.0.0",
