--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "semver": "5.4.1",
     "shelljs": "0.7.8",
     "svg-sprite-loader": "3.5.2",
+    "uglify-js": "^3.9.3",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
     "vue-loader": "^14.2.4",
